--- a/htmlws.htm
+++ b/htmlws.htm
@@ -4,10 +4,13 @@
         <meta charset="utf-8">
         <style>
             #txtContent{
-                width:90%;
+                width:100%;
             }
             #sendText{
-                width:20%;
+                width:100%;
+            }
+            #serverPath{
+                width:40%;
             }
             body{
                 background-color:#303030;
@@ -27,8 +30,8 @@
         <div id="login">
             <div>
                 <input id="serverIP" type="text" placeholder="服务器IP" value="127.0.0.1" autofocus="autofocus" />
-                <input id="serverPort" type="text" placeholder="服务器端口" value="28080" />
-                <input id="serverPath" type="text" placeholder="路径" value="/" />
+                <input id="serverPort" type="text" placeholder="服务器端口" value="41919" />
+                <input id="serverPath" type="text" placeholder="路径" value="/auth/ws?token=" />
                 <input id="btnConnect" type="button" value="连接" onclick="connect()" />
             </div>
             
