feat: 加入万能头和万能neg

--- a/htmlws.htm
+++ b/htmlws.htm
@@ -31,7 +31,7 @@
             <div>
                 <input id="serverIP" type="text" placeholder="服务器IP" value="127.0.0.1" autofocus="autofocus" />
                 <input id="serverPort" type="text" placeholder="服务器端口" value="41919" />
-                <input id="serverPath" type="text" placeholder="路径" value="/auth/ws?token=" />
+                <input id="serverPath" type="text" placeholder="路径" value="/ws?token=" />
                 <input id="btnConnect" type="button" value="连接" onclick="connect()" />
             </div>
             
